fixes overflow navbar and margins on prompt box

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -56,7 +56,7 @@ nav {
   top: 0;
   left: 0;
 
-  width: 100vw;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
@@ -600,7 +600,7 @@ nav {
   background-color: #faf8fd;
 
   margin-left: 2rem;
-  margin-right: 1rem;
+  margin-right: 2rem;
   margin-top: 10rem;
 
   padding: 0.8rem;
